--- a/assets/include/_pageCharacter.html
+++ b/assets/include/_pageCharacter.html
@@ -1,41 +1,41 @@
 
-<div class="l-nav">
-    <div class="bg-nav">
-        <img src="assets/img/banner_character.png" width="1920" height="220" alt="" id="img-pc">
-        <img src="assets/img/banner_character_mb.png" width="640" height="238" alt="" id="img-mobile">
+<div class="l_nav">
+    <div class="bg_nav">
+        <img src="assets/img/banner_character.png" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/banner_character_mb.png" width="640" height="238" alt="" id="img_mobile">
     </div>
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
-        <ul class="dropdown-content" id="menuDropdown">
+        <ul class="dropdown_content" id="menuDropdown">
             <div class="container">
                 <li><a href="index.html" >HOME</a></li>
-                <li><a onclick="loadPageService()">サービス紹介 </a></li>
-                <li><a onclick="loadPageHome()">実績・事例紹介 </a></li>
-                <li><a onclick="loadPageChracter()">組織・人事コンサルティングの特徴 </a></li>
-                <li><a onclick="loadPageConsult()">注目のテーマ</a></li>
-                <li><a onclick="loadPageProfile()">資料ダウンロード</a></li>
+                <li><a href="service.html">サービス紹介 </a></li>
+                <li><a href="index.html" >実績・事例紹介 </a></li>
+                <li><a href="character.html">組織・人事コンサルティングの特徴 </a></li>
+                <li><a href="consult.html">注目のテーマ</a></li>
+                <li><a href="profile.html">資料ダウンロード</a></li>
             </div>
         </ul>
     </nav>
 </div>
-<div class="l-content">
+<div class="l_content">
     <div id="page">
-        <div class="l-beadcrumb">
+        <div class="l_beadcrumb">
             <div class="container">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a onclick="loadPageWorksHome()">HOME </a></li>
-                    <li class="breadcrumb-item active"><a onclick="loadPageWorksHome()">組織・人事コンサルティングの特徴</a></li>
+                    <li class="breadcrumb_item"><a onclick="loadPageWorksHome()">HOME </a></li>
+                    <li class="breadcrumb_item active"><a onclick="loadPageWorksHome()">組織・人事コンサルティングの特徴</a></li>
                     
                 </ol>
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="p-content-04">
+        <div class="p_content_03">
             <div class="container-fluid">
                  <div class="character">
     <div class="wrapper">
-        <div class="c-text">
+        <div class="c_text">
             <h1>中小中堅企業の持続的成長を支援</h1>
             <p>
                 日本における本格的な高齢化社会・人口減少局面への突入、AIやIoTと呼ばれるデジタル技術の加速度的な革新、世界的な政局の不安定さ・不透明感の増幅・・・これらの劇的な環境変化の中、個々の企業においても、経営のパラダイムを大きく変えていかなくてはならない時代になっています。
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="c-img">
+        <div class="c_img">
             <img src="assets/img/character_01.png" width="740" height="640"alt="" class="img_pc">
             <img src="assets/img/character_mb_01.jpg" width="640" height="400"alt="" class="img_mb">
         </div>
@@ -57,9 +57,9 @@
     
 </div>
 
-<div class="character character-left">
+<div class="character character_left">
     <div class="wrapper">
-        <div class="c-text">
+        <div class="c_text">
             <h1>「経営コンサルティング」としての
                     「組織人事コンサルティング」</h1>
            <p>
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="c-img">
+        <div class="c_img">
             <img src="assets/img/character_02.png" width="740" height="640"alt="" class="img_pc">
             <img src="assets/img/character_mb_02.jpg" width="640" height="400"alt="" class="img_mb">
             
@@ -81,7 +81,7 @@
 </div>
 <div class="character">
     <div class="wrapper">
-        <div class="c-text">
+        <div class="c_text">
             <h1>「事業承継」「M&A」「事業再生」
                     ×「組織人事」</h1>
             <p>
@@ -93,14 +93,14 @@
         </div>
     </div>
     <div class="container">
-        <div class="c-img">
+        <div class="c_img">
             <img src="assets/img/character_03.png" width="740" height="640"alt="" class="img_pc">
             <img src="assets/img/character_mb_03.jpg" width="640" height="400"alt="" class="img_mb">
         </div>
     </div>
     
 </div>
-                 <div class="character-service">
+                 <div class="character_service">
                      <div class="wrapper">
                             <div class="title">
                                 <p>
@@ -109,39 +109,39 @@
                                 </p>
                             </div>
 
-                             <div class="icon-service">
-                                <div class="e-icon">
-                                     <div class="e-img">
+                             <div class="icon_service">
+                                <div class="e_icon">
+                                     <div class="e_img">
                                          <img src="assets/img/icon_service_01.png" width="100" height="90" alt="">
                                      </div>
-                                     <div class="e-info">
+                                     <div class="e_info">
                                          <span>組織コンサル<br class="br_mb"/>ティング <br class="br_pc"/>サービス</span>
                                          <i class="fa fa-angle-right" aria-hidden="true"></i>
                                      </div>
                                  </div>
-                                 <div class="e-icon">
-                                    <div class="e-img">
+                                 <div class="e_icon">
+                                    <div class="e_img">
                                         <img src="assets/img/icon_service_02.png" width="100" height="90" alt="">
                                     </div>
-                                    <div class="e-info">
+                                    <div class="e_info">
                                         <span>人事コンサル<br class="br_mb"/>ティング<br class="br_pc"/> サービス</span>
                                         <i class="fa fa-angle-right" aria-hidden="true"></i>
                                     </div>
                                 </div>
-                                <div class="e-icon">
-                                    <div class="e-img">
+                                <div class="e_icon">
+                                    <div class="e_img">
                                         <img src="assets/img/icon_service_03.png" width="100" height="90" alt="">
                                     </div>
-                                    <div class="e-info">
+                                    <div class="e_info">
                                         <span>労務コンサル<br class="br_mb"/>ティング <br class="br_pc"/>サービス </span>
                                         <i class="fa fa-angle-right" aria-hidden="true"></i>
                                     </div>
                                 </div>
-                                <div class="e-icon">
-                                    <div class="e-img">
+                                <div class="e_icon">
+                                    <div class="e_img">
                                         <img src="assets/img/icon_service_04.png" width="100" height="90" alt="">
                                     </div>
-                                    <div class="e-info">
+                                    <div class="e_info">
                                         <span>役員報酬設計<br class="br_pc"/>
                                                 コンサル<br class="br_mb"/>ティングサービス
                                         <i class="fa fa-angle-right" aria-hidden="true"></i>
