--- a/assets/include/components/_character.html
+++ b/assets/include/components/_character.html
@@ -1,6 +1,6 @@
 <div class="character">
     <div class="wrapper">
-        <div class="c-text">
+        <div class="c_text">
             <h1>中小中堅企業の持続的成長を支援</h1>
             <p>
                 日本における本格的な高齢化社会・人口減少局面への突入、AIやIoTと呼ばれるデジタル技術の加速度的な革新、世界的な政局の不安定さ・不透明感の増幅・・・これらの劇的な環境変化の中、個々の企業においても、経営のパラダイムを大きく変えていかなくてはならない時代になっています。
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="c-img">
+        <div class="c_img">
             <img src="assets/img/character_01.png" width="740" height="640"alt="" class="img_pc">
             <img src="assets/img/character_mb_01.jpg" width="640" height="400"alt="" class="img_mb">
         </div>
@@ -22,9 +22,9 @@
     
 </div>
 
-<div class="character character-left">
+<div class="character character_left">
     <div class="wrapper">
-        <div class="c-text">
+        <div class="c_text">
             <h1>「経営コンサルティング」としての
                     「組織人事コンサルティング」</h1>
            <p>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="c-img">
+        <div class="c_img">
             <img src="assets/img/character_02.png" width="740" height="640"alt="" class="img_pc">
             <img src="assets/img/character_mb_02.jpg" width="640" height="400"alt="" class="img_mb">
             
@@ -46,7 +46,7 @@
 </div>
 <div class="character">
     <div class="wrapper">
-        <div class="c-text">
+        <div class="c_text">
             <h1>「事業承継」「M&A」「事業再生」
                     ×「組織人事」</h1>
             <p>
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="c-img">
+        <div class="c_img">
             <img src="assets/img/character_03.png" width="740" height="640"alt="" class="img_pc">
             <img src="assets/img/character_mb_03.jpg" width="640" height="400"alt="" class="img_mb">
         </div>
