--- a/assets/include/components/_element.html
+++ b/assets/include/components/_element.html
@@ -1,12 +1,12 @@
 <div class="wrapper">
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_01_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_01_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_01_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_01_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>勇 明宏</span>いさみ あきひろ</p>
                 <dl>
                     <dt>役職</dt>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
@@ -51,13 +51,13 @@
         </div>
     </div>
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_02_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_02_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_02_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_02_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>川人 伸</span>かわひと しん</p>
                 <dl>
                     <dt>役職</dt>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
@@ -99,13 +99,13 @@
 <div class="bg_content">
     <div class="wrapper ">
         <div class="element">
-            <div class="e-main">
-                <div class="e-img">
-                    <img src="assets/img/img_03_pc.jpg" width="180" height="240" class="e-img-pc">
-                    <img src="assets/img/img_03_mb.jpg" width="560" height="420" class="e-img-mb">
+            <div class="e_main">
+                <div class="e_img">
+                    <img src="assets/img/img_03_pc.jpg" width="180" height="240" class="e_img_pc">
+                    <img src="assets/img/img_03_mb.jpg" width="560" height="420" class="e_img_mb">
                     
                 </div>
-                <div class="e-info">
+                <div class="e_info">
                     <p><span>榊 裕之</span>さかき ひろゆき</p>
                     <dl>
                         <dt>役職</dt>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="e-profile">
+            <div class="e_profile">
                 <dl>
                     <dt>略歴</dt>
                     <dd>
@@ -150,13 +150,13 @@
             </div>
         </div>
         <div class="element">
-            <div class="e-main">
-                <div class="e-img">
-                    <img src="assets/img/img_04_pc.jpg" width="180" height="240" class="e-img-pc">
-                    <img src="assets/img/img_04_mb.jpg" width="560" height="420" class="e-img-mb">
+            <div class="e_main">
+                <div class="e_img">
+                    <img src="assets/img/img_04_pc.jpg" width="180" height="240" class="e_img_pc">
+                    <img src="assets/img/img_04_mb.jpg" width="560" height="420" class="e_img_mb">
                     
                 </div>
-                <div class="e-info">
+                <div class="e_info">
                     <p><span>守田 力</span>もりた りき</p>
                     <dl>
                         <dt>役職</dt>
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="e-profile">
+            <div class="e_profile">
                 <dl>
                     <dt>略歴</dt>
                     <dd>
@@ -193,13 +193,13 @@
 </div>
 <div class="wrapper">
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_05_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_05_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_05_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_05_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>黒田 翔平</span>くろだ しょうへい</p>
                 <dl>
                     <dt>役職</dt>
@@ -217,7 +217,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
@@ -241,13 +241,13 @@
         </div>
     </div>
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_06_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_06_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_06_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_06_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>佛下 康平</span>ぶつした こうへい</p>
                 <dl>
                     <dt>役職</dt>
@@ -262,7 +262,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
