--- a/assets/include/components/_nav.html
+++ b/assets/include/components/_nav.html
@@ -1,19 +1,19 @@
-<div class="l-nav">
-    <div class="bg-nav">
-        <img src="assets/img/@@img_pc" width="1920" height="220" alt="" id="img-pc">
-        <img src="assets/img/@@img_mb" width="640" height="238" alt="" id="img-mobile">
+<div class="l_nav">
+    <div class="bg_nav">
+        <img src="assets/img/@@img_pc" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/@@img_mb" width="640" height="238" alt="" id="img_mobile">
     </div>
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
-        <ul class="dropdown-content" id="menuDropdown">
+        <ul class="dropdown_content" id="menuDropdown">
             <div class="container">
                 <li><a href="index.html" >HOME</a></li>
-                <li><a onclick="loadPageService()">サービス紹介 </a></li>
-                <li><a onclick="loadPageHome()">実績・事例紹介 </a></li>
-                <li><a onclick="loadPageChracter()">組織・人事コンサルティングの特徴 </a></li>
-                <li><a onclick="loadPageConsult()">注目のテーマ</a></li>
-                <li><a onclick="loadPageProfile()">資料ダウンロード</a></li>
+                <li><a href="service.html">サービス紹介 </a></li>
+                <li><a href="index.html" >実績・事例紹介 </a></li>
+                <li><a href="character.html">組織・人事コンサルティングの特徴 </a></li>
+                <li><a href="consult.html">注目のテーマ</a></li>
+                <li><a href="profile.html">資料ダウンロード</a></li>
             </div>
         </ul>
     </nav>
