--- a/assets/include/footer.html
+++ b/assets/include/footer.html
@@ -1,10 +1,10 @@
-<div class="l-footer">
+<div class="l_footer">
     <section class="information">
         <div class="container">
             <div class="section_inner">
                 <p class="info">Infomation</p>
-                <p class="content-top">ご相談・お問い合わせはお気軽に</p>
-                <p class="content-mid">お問い合わせはこちらから </p>
+                <p class="content_top">ご相談・お問い合わせはお気軽に</p>
+                <p class="content_mid">お問い合わせはこちらから </p>
                 <div class="phone_pc">
                     <p class="phone">03-6212-2512</p>
                     <p class="small">受付時間　平日9:00～18:00 (土日祝除く) </p>
@@ -14,7 +14,7 @@
                     <p class="small">受付時間　平日9:00～18:00 (土日祝除く) </p>
                 </div>
                 <div class="line">
-                    <div class="h-write">
+                    <div class="h_write">
                         <img src="assets/img/icon_write.png" height="30" width="30" alt="">
                         Webからのお問い合わせはこちら <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </div>
