--- a/assets/include/header.html
+++ b/assets/include/header.html
@@ -1,11 +1,11 @@
-<div class="l-header">
+<div class="l_header">
     <div class="container">
-        <div class="h-top">
+        <div class="h_top">
             <div class="row">
-                <div class="col text-left">
+                <div class="col text_left">
                     <span>テキストが入ります。テキストが入ります。</span>
                 </div>
-                <div class="col text-right">
+                <div class="col text_right">
                     <ul>
                         <li>経験者採用</li>
                         <li>会社概要</li>
@@ -16,15 +16,15 @@
     </div>
     <hr/>
     <div class="container">
-        <div class="h-mid">
+        <div class="h_mid">
             <div class="row">
-                <div class="h-logo">
+                <div class="h_logo">
                     <img src="assets/img/logo.png" width="445" height="70" alt="" id="logo_pc">
                     <img src="assets/img/logo-res.png" width="100%" alt="" id="logo_mb">        
                 </div>
-                <div class="h-info">
+                <div class="h_info">
                     <img src="assets/img/info.png" width="415" height="50" alt="">
-                    <div class="h-write">
+                    <div class="h_write">
     <img src="assets/img/icon_write.png" height="30" width="30" alt="">
     Webからのお問い合わせ <i class="fa fa-angle-right" aria-hidden="true"></i>
 </div>
