--- a/assets/include/_pageConsult.html
+++ b/assets/include/_pageConsult.html
@@ -1,54 +1,57 @@
 
-<div class="l-nav">
-    <div class="bg-nav">
-        <img src="assets/img/banner.jpg" width="1920" height="220" alt="" id="img-pc">
-        <img src="assets/img/banner_mobile.jpg" width="640" height="238" alt="" id="img-mobile">
+<div class="l_nav">
+    <div class="bg_nav">
+        <img src="assets/img/banner.jpg" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/banner_mobile.jpg" width="640" height="238" alt="" id="img_mobile">
     </div>
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
-        <ul class="dropdown-content" id="menuDropdown">
+        <ul class="dropdown_content" id="menuDropdown">
             <div class="container">
                 <li><a href="index.html" >HOME</a></li>
-                <li><a onclick="loadPageService()">サービス紹介 </a></li>
-                <li><a onclick="loadPageHome()">実績・事例紹介 </a></li>
-                <li><a onclick="loadPageChracter()">組織・人事コンサルティングの特徴 </a></li>
-                <li><a onclick="loadPageConsult()">注目のテーマ</a></li>
-                <li><a onclick="loadPageProfile()">資料ダウンロード</a></li>
+                <li><a href="service.html">サービス紹介 </a></li>
+                <li><a href="index.html" >実績・事例紹介 </a></li>
+                <li><a href="character.html">組織・人事コンサルティングの特徴 </a></li>
+                <li><a href="consult.html">注目のテーマ</a></li>
+                <li><a href="profile.html">資料ダウンロード</a></li>
             </div>
         </ul>
     </nav>
 </div>
-<div class="l-content">
+<div class="l_content">
     <div id="page">
-        <div class="l-beadcrumb">
+        <div class="l_beadcrumb">
             <div class="container">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a onclick="loadPageWorksHome()">HOME </a></li>
-                    <li class="breadcrumb-item"><a onclick="loadPageWorksHome()">会社概要</a></li>
-                    <li class="breadcrumb-item active"><a onclick="loadPageWorksHome()">コンサルタント紹介 </a></li>
+                    <li class="breadcrumb_item"><a onclick="loadPageWorksHome()">HOME </a></li>
+                    <li class="breadcrumb_item"><a onclick="loadPageWorksHome()">会社概要</a></li>
+                    <li class="breadcrumb_item active"><a onclick="loadPageWorksHome()">コンサルタント紹介 </a></li>
                 </ol>
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="p-content-06">
+        <div class="p_content_04">
                 <div class="wrapper">
-                    <div class="menu-top">
+                    <div class="menu_top">
                         <ul>
-                            <li>組織コンサルティングサービス</li>
-                            <li>組織コンサルティング</li>
-                            <li>BPR・業務環境改善</li>
+                            <li>組織コンサルティングサービス
+                                <ul>
+                                    <li>組織コンサルティング</li>
+                                    <li>BPR・業務環境改善</li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                     <section id="section_01">
                         <div class="section_inner">
-                            <h1>組織コンサルティング</h1>
+                            <span>組織コンサルティング</span>
                             <p class="txt">
                                     弊社では、社内に組織変革コンサルティング実績、社会保険労務士資格、コーチング資格を有したメンバーを多数有しており、企業変革に必要な各要素に対して総合的にコンサルティングサービスをご提供しております。
                             </p>
                             <div class="info">
                                 <div class="info_left">
-                                    <div class="element">
+                                    <div class="info_content">
                                         <div class="title">経営ビジョン・戦略領域</div>
                                         <ul>
                                             <li>ビジョンメイキング、戦略立案 </li>
@@ -57,7 +60,7 @@
                                             <li>事例研修</li>
                                         </ul>
                                     </div>
-                                    <div class="element">
+                                    <div class="info_content">
                                         <div class="title">組織デザイン領域</div>
                                         <ul>
                                             <li>BPR（業務改革） </li>
@@ -69,7 +72,7 @@
                                                 
                                         </ul>
                                     </div>
-                                    <div class="element">
+                                    <div class="info_content">
                                         <div class="title">ヒト、組織・風土文化に関する領域</div>
                                         <ul>
                                             <li>組織診断の実施 </li>
@@ -87,7 +90,7 @@
                             </div>
                             <div class="clearfix"></div>
                             <div class="line">
-                                <div class="h-write">
+                                <div class="h_write">
                                     <img src="assets/img/icon_write.png" height="30" width="30" alt="">
                                     Webからのお問い合わせはこちら
                                 </div>
@@ -96,7 +99,7 @@
                     </section>
                     <section id="section_02">
                         <div class="section_inner">
-                            <h1>BPR・業務環境改善</h1>
+                            <span>BPR・業務環境改善</span>
                             <div class="info">
                                 <div class="info_left">
                                     <p>
@@ -122,7 +125,7 @@
                             </div>
                             <div class="clearfix"></div>
                             <div class="line">
-                                <div class="h-write">
+                                <div class="h_write">
                                     <img src="assets/img/icon_write.png" height="30" width="30" alt="">
                                     Webからのお問い合わせはこちら
                                 </div>
