--- a/assets/include/_pageService.html
+++ b/assets/include/_pageService.html
@@ -1,54 +1,54 @@
 
-<div class="l-nav">
-    <div class="bg-nav">
-        <img src="assets/img/banner_service.jpg" width="1920" height="220" alt="" id="img-pc">
-        <img src="assets/img/banner_service_mb.jpg" width="640" height="238" alt="" id="img-mobile">
+<div class="l_nav">
+    <div class="bg_nav">
+        <img src="assets/img/banner_service.jpg" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/banner_service_mb.jpg" width="640" height="238" alt="" id="img_mobile">
     </div>
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
-        <ul class="dropdown-content" id="menuDropdown">
+        <ul class="dropdown_content" id="menuDropdown">
             <div class="container">
                 <li><a href="index.html" >HOME</a></li>
-                <li><a onclick="loadPageService()">サービス紹介 </a></li>
-                <li><a onclick="loadPageHome()">実績・事例紹介 </a></li>
-                <li><a onclick="loadPageChracter()">組織・人事コンサルティングの特徴 </a></li>
-                <li><a onclick="loadPageConsult()">注目のテーマ</a></li>
-                <li><a onclick="loadPageProfile()">資料ダウンロード</a></li>
+                <li><a href="service.html">サービス紹介 </a></li>
+                <li><a href="index.html" >実績・事例紹介 </a></li>
+                <li><a href="character.html">組織・人事コンサルティングの特徴 </a></li>
+                <li><a href="consult.html">注目のテーマ</a></li>
+                <li><a href="profile.html">資料ダウンロード</a></li>
             </div>
         </ul>
     </nav>
 </div>
-<div class="l-content">
+<div class="l_content">
     <div id="page">
-        <div class="l-beadcrumb">
+        <div class="l_beadcrumb">
             <div class="container">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a onclick="loadPageWorksHome()">HOME </a></li>
-                    <li class="breadcrumb-item active"><a onclick="loadPageWorksHome()">サービス紹介  </a></li>
+                    <li class="breadcrumb_item"><a onclick="loadPageWorksHome()">HOME </a></li>
+                    <li class="breadcrumb_item active"><a onclick="loadPageWorksHome()">サービス紹介  </a></li>
                 </ol>
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="p-content-02">
+        <div class="p_content_02">
             <div class="container">
                 <div class="wrapper">
-                    <p class="txt-head">組織・人事コンサルティングの4つのサービスについてご紹介いたします。</p>
+                    <p class="txt_head">組織・人事コンサルティングの4つのサービスについてご紹介いたします。</p>
                     <div class="service">
-    <div class="s-icon">
+    <div class="s_icon">
         <img src="assets/img/icon_service_01.png"  width="100" height="100" alt="">
     </div>
-    <div class="s-content">
-            <div class="s-icon">
+    <div class="s_content">
+            <div class="s_icon">
                     <img src="assets/img/icon_service_01.png"  width="80" height="80" alt="">
                 </div>
-        <div class="s-title">
+        <div class="s_title">
             <span> 組織コンサルティング　<i class="fa fa-angle-right" aria-hidden="true"></i> </span>
         </div>
-        <div class="s-text">
+        <div class="s_text">
             「組織の再設計～業務のリストラクチャリング～各メンバーのスキル開発」の一連のサービスを通して、組織の持つ力を最大限発揮できる環境づくりをします
         </div>
-        <div class="s-end">
+        <div class="s_end">
             <ul>
                 <li> <a href="#">組織コンサルティング</a></li>
                 <li><a href="#">BPR・業務環境改善</a></li>
@@ -58,20 +58,20 @@
 </div>
 
 <div class="service">
-    <div class="s-icon">
+    <div class="s_icon">
         <img src="assets/img/icon_service_02.png"  width="100" height="100" alt="">
     </div>
-    <div class="s-content">
-            <div class="s-icon">
+    <div class="s_content">
+            <div class="s_icon">
                     <img src="assets/img/icon_service_02.png"  width="80" height="80" alt="">
                 </div>
-        <div class="s-title">
+        <div class="s_title">
             <span> 人事コンサルティング　<i class="fa fa-angle-right" aria-hidden="true"></i> </span>
         </div>
-        <div class="s-text">
+        <div class="s_text">
             人事制度の構築～運用～定着まで総合的に支援することで、マネジメント改善や企業風土の改革を実現します
         </div>
-        <div class="s-end">
+        <div class="s_end">
             <ul>　　　　
                 <li> <a href="#">人事制度再構築</a></li>
                 <li> <a href="#">教育・研修</a></li>
@@ -82,20 +82,20 @@
 </div>
 
 <div class="service">
-    <div class="s-icon">
+    <div class="s_icon">
         <img src="assets/img/icon_service_03.png"  width="100" height="100" alt="">
     </div>
-    <div class="s-content">
-            <div class="s-icon">
+    <div class="s_content">
+            <div class="s_icon">
                     <img src="assets/img/icon_service_03.png"  width="80" height="80" alt="">
                 </div>
-        <div class="s-title">
+        <div class="s_title">
             <span> 人事コンサルティング　<i class="fa fa-angle-right" aria-hidden="true"></i> </span>
         </div>
-        <div class="s-text">
+        <div class="s_text">
                 人事領域における「守り」を確固たるものするための支援をいたします
         </div>
-        <div class="s-end">
+        <div class="s_end">
             <ul>　　　　　　
                 <li> <a href="#">労務デューデリジェンス</a></li>
                 <li> <a href="#">労務相談</a></li>
@@ -105,20 +105,20 @@
 </div>
 
 <div class="service">
-    <div class="s-icon">
+    <div class="s_icon">
         <img src="assets/img/icon_service_04.png"  width="100" height="100" alt="">
     </div>
-    <div class="s-content">
-            <div class="s-icon">
+    <div class="s_content">
+            <div class="s_icon">
                     <img src="assets/img/icon_service_04.png"  width="80" height="80" alt="">
                 </div>
-        <div class="s-title">
+        <div class="s_title">
             <span> 役員報酬設計<br/>コンサルティング 　<i class="fa fa-angle-right icon_mb" aria-hidden="true"></i> </span>
         </div>
-        <div class="s-text">
+        <div class="s_text">
                 事業戦略推進に貢献する役員報酬を設計します。また、ストックオプションや株式報酬導入において豊富な実績を有しており、最適なスキームをご提案します。
         </div>
-        <div class="s-end">
+        <div class="s_end">
             <ul>　　　　　　　　
                 <li> <a href="#">役員報酬設</a></li>
                 <li> <a href="#">株式報酬・ストックオプション導入</a></li>
@@ -126,7 +126,7 @@
         </div>
     </div>
 </div>
-                    <div class="box-bottom">
+                    <div class="box_bottom">
                         <p>実績・事例を見る <i class="fa fa-angle-right" aria-hidden="true"></i></p>
                     </div>
                 </div>
