--- a/assets/include/index.html
+++ b/assets/include/index.html
@@ -1,37 +1,37 @@
 
-<div class="l-nav">
-    <div class="bg-nav">
-        <img src="assets/img/banner.jpg" width="1920" height="220" alt="" id="img-pc">
-        <img src="assets/img/banner_mobile.jpg" width="640" height="238" alt="" id="img-mobile">
+<div class="l_nav">
+    <div class="bg_nav">
+        <img src="assets/img/banner.jpg" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/banner_mobile.jpg" width="640" height="238" alt="" id="img_mobile">
     </div>
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
-        <ul class="dropdown-content" id="menuDropdown">
+        <ul class="dropdown_content" id="menuDropdown">
             <div class="container">
                 <li><a href="index.html" >HOME</a></li>
-                <li><a onclick="loadPageService()">サービス紹介 </a></li>
-                <li><a onclick="loadPageHome()">実績・事例紹介 </a></li>
-                <li><a onclick="loadPageChracter()">組織・人事コンサルティングの特徴 </a></li>
-                <li><a onclick="loadPageConsult()">注目のテーマ</a></li>
-                <li><a onclick="loadPageProfile()">資料ダウンロード</a></li>
+                <li><a href="service.html">サービス紹介 </a></li>
+                <li><a href="index.html" >実績・事例紹介 </a></li>
+                <li><a href="character.html">組織・人事コンサルティングの特徴 </a></li>
+                <li><a href="consult.html">注目のテーマ</a></li>
+                <li><a href="profile.html">資料ダウンロード</a></li>
             </div>
         </ul>
     </nav>
 </div>
-<div class="l-content">
+<div class="l_content">
     <div id="page">
-        <div class="l-beadcrumb">
+        <div class="l_beadcrumb">
             <div class="container">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a onclick="loadPageWorksHome()">HOME </a></li>
-                    <li class="breadcrumb-item"><a onclick="loadPageWorksHome()">会社概要</a></li>
-                    <li class="breadcrumb-item active"><a onclick="loadPageWorksHome()">コンサルタント紹介 </a></li>
+                    <li class="breadcrumb_item"><a onclick="loadPageWorksHome()">HOME </a></li>
+                    <li class="breadcrumb_item"><a onclick="loadPageWorksHome()">会社概要</a></li>
+                    <li class="breadcrumb_item active"><a onclick="loadPageWorksHome()">コンサルタント紹介 </a></li>
                 </ol>
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="p-content-01">
+        <div class="p_content_01">
             <div class="menu_mb">
                 <ul>
                     <li><a href="#">勇 明宏</a></li>
@@ -43,16 +43,15 @@
                     
                 </ul>
             </div>
-            </div>
                 <div class="wrapper">
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_01_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_01_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_01_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_01_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>勇 明宏</span>いさみ あきひろ</p>
                 <dl>
                     <dt>役職</dt>
@@ -70,7 +69,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
@@ -97,13 +96,13 @@
         </div>
     </div>
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_02_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_02_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_02_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_02_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>川人 伸</span>かわひと しん</p>
                 <dl>
                     <dt>役職</dt>
@@ -117,7 +116,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
@@ -145,13 +144,13 @@
 <div class="bg_content">
     <div class="wrapper ">
         <div class="element">
-            <div class="e-main">
-                <div class="e-img">
-                    <img src="assets/img/img_03_pc.jpg" width="180" height="240" class="e-img-pc">
-                    <img src="assets/img/img_03_mb.jpg" width="560" height="420" class="e-img-mb">
+            <div class="e_main">
+                <div class="e_img">
+                    <img src="assets/img/img_03_pc.jpg" width="180" height="240" class="e_img_pc">
+                    <img src="assets/img/img_03_mb.jpg" width="560" height="420" class="e_img_mb">
                     
                 </div>
-                <div class="e-info">
+                <div class="e_info">
                     <p><span>榊 裕之</span>さかき ひろゆき</p>
                     <dl>
                         <dt>役職</dt>
@@ -166,7 +165,7 @@
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="e-profile">
+            <div class="e_profile">
                 <dl>
                     <dt>略歴</dt>
                     <dd>
@@ -196,13 +195,13 @@
             </div>
         </div>
         <div class="element">
-            <div class="e-main">
-                <div class="e-img">
-                    <img src="assets/img/img_04_pc.jpg" width="180" height="240" class="e-img-pc">
-                    <img src="assets/img/img_04_mb.jpg" width="560" height="420" class="e-img-mb">
+            <div class="e_main">
+                <div class="e_img">
+                    <img src="assets/img/img_04_pc.jpg" width="180" height="240" class="e_img_pc">
+                    <img src="assets/img/img_04_mb.jpg" width="560" height="420" class="e_img_mb">
                     
                 </div>
-                <div class="e-info">
+                <div class="e_info">
                     <p><span>守田 力</span>もりた りき</p>
                     <dl>
                         <dt>役職</dt>
@@ -215,7 +214,7 @@
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="e-profile">
+            <div class="e_profile">
                 <dl>
                     <dt>略歴</dt>
                     <dd>
@@ -239,13 +238,13 @@
 </div>
 <div class="wrapper">
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_05_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_05_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_05_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_05_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>黒田 翔平</span>くろだ しょうへい</p>
                 <dl>
                     <dt>役職</dt>
@@ -263,7 +262,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
@@ -287,13 +286,13 @@
         </div>
     </div>
     <div class="element">
-        <div class="e-main">
-            <div class="e-img">
-                <img src="assets/img/img_06_pc.jpg" width="180" height="240" class="e-img-pc">
-                <img src="assets/img/img_06_mb.jpg" width="560" height="420" class="e-img-mb">
+        <div class="e_main">
+            <div class="e_img">
+                <img src="assets/img/img_06_pc.jpg" width="180" height="240" class="e_img_pc">
+                <img src="assets/img/img_06_mb.jpg" width="560" height="420" class="e_img_mb">
                 
             </div>
-            <div class="e-info">
+            <div class="e_info">
                 <p><span>佛下 康平</span>ぶつした こうへい</p>
                 <dl>
                     <dt>役職</dt>
@@ -308,7 +307,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="e-profile">
+        <div class="e_profile">
             <dl>
                 <dt>略歴</dt>
                 <dd>
