--- a/assets/include/components/_nav.html
+++ b/assets/include/components/_nav.html
@@ -1,8 +1,5 @@
 <div class="l_nav">
-    <div class="bg_nav">
-        <img src="assets/img/@@img_pc" width="1920" height="220" alt="" id="img_pc">
-        <img src="assets/img/@@img_mb" width="640" height="238" alt="" id="img_mobile">
-    </div>
+   
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
@@ -17,4 +14,9 @@
             </div>
         </ul>
     </nav>
+    <div class="bg_nav">
+        <img src="assets/img/@@img_pc" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/@@img_mb" width="640" height="238" alt="" id="img_mobile">
+    </div>
 </div>
+<div class="clearfix"></div>
