--- a/assets/include/footer.html
+++ b/assets/include/footer.html
@@ -5,23 +5,26 @@
                 <p class="info">Infomation</p>
                 <p class="content_top">ご相談・お問い合わせはお気軽に</p>
                 <p class="content_mid">お問い合わせはこちらから </p>
-                <div class="phone_pc">
+                <div class="phone_pc pc">
                     <p class="phone">03-6212-2512</p>
                     <p class="small">受付時間　平日9:00～18:00 (土日祝除く) </p>
                 </div>
-                <div class="phone_mb">
-                    <p class="phone">TEL: <span>03-6212-2512</span></p>
-                    <p class="small">受付時間　平日9:00～18:00 (土日祝除く) </p>
+                <div class="phone_mb mb">
+                    <img src="assets/img/phone_ft_mb.png" width="560" height="110">
                 </div>
                 <div class="line">
-                    <div class="h_write">
+                    <div class="h_write pc" >
                         <img src="assets/img/icon_write.png" height="30" width="30" alt="">
                         Webからのお問い合わせはこちら <i class="fa fa-angle-right" aria-hidden="true"></i>
+                    </div>
+                    <div class="h_write mb">
+                        <img src="assets/img/write_mb.png" width="560" height="80">
                     </div>
                 </div>
             </div>  
         </div>
     </section>
+    <div class="clearfix"></div>
    <section id="menu_ft">
        <div class="container">
            <div class="row">
