--- a/assets/include/index.html
+++ b/assets/include/index.html
@@ -1,9 +1,6 @@
 
 <div class="l_nav">
-    <div class="bg_nav">
-        <img src="assets/img/banner.jpg" width="1920" height="220" alt="" id="img_pc">
-        <img src="assets/img/banner_mobile.jpg" width="640" height="238" alt="" id="img_mobile">
-    </div>
+   
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
@@ -18,7 +15,12 @@
             </div>
         </ul>
     </nav>
+    <div class="bg_nav">
+        <img src="assets/img/banner.jpg" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/banner_mobile.jpg" width="640" height="238" alt="" id="img_mobile">
+    </div>
 </div>
+<div class="clearfix"></div>
 <div class="l_content">
     <div id="page">
         <div class="l_beadcrumb">
