--- a/assets/include/header.html
+++ b/assets/include/header.html
@@ -3,7 +3,7 @@
         <div class="h_top">
             <div class="row">
                 <div class="col text_left">
-                    <span>テキストが入ります。テキストが入ります。</span>
+                    <span id="fs">テキストが入ります。テキストが入ります。</span>
                 </div>
                 <div class="col text_right">
                     <ul>
